[Closes #452, Closes #451] Handle create/update draft on DEM data set import, disable invitations during import (#453)
* [Closes #452, Closes #451] Handle create/update draft on DEM data set import, disable invitations during import

* Restore Version commit button

* Implement search on agency demographic list views

* Fix dupe email checks in Employment

* Comment out console.log

* Fix delete Personnel

* Relax email requirement on Employment/Personnel

* Don't show Resend if invite never sent

* Invite/Resend

* Fix nemsis public repo handling

* Fix parameter in pull script

* Remove validation test

--- a/angular/projects/admin/src/app/demographics/personnel-list-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/personnel-list-demographics.component.html
@@ -23,8 +23,13 @@
       </ng-container>
       <ng-container *ngIf="!record.isPending && record.refusedAt">Refused access on {{ record.refusedAt | date }}</ng-container>
       <ng-container *ngIf="!record.isPending && !record.userId">
-        <button (click)="onResend($event, record)" class="btn btn--sm btn--primary">Resend</button>&nbsp; Invited on
-        {{ record.invitationAt | date }}
+        <ng-container *ngIf="record.invitationAt">
+          <button (click)="onResend($event, record)" class="btn btn--sm btn--primary">Resend</button>&nbsp; Invited on
+          {{ record.invitationAt | date }}
+        </ng-container>
+        <ng-container *ngIf="!record.invitationAt">
+          <button (click)="onResend($event, record)" class="btn btn--sm btn--primary">Invite</button>
+        </ng-container>
       </ng-container>
     </td>
   </ng-template>
