[Closes #456, Closes #457] Admin Facility fixes (#458)
* [Closes #457] Agency Admin can search Facilities

* [Closes #456] Fix new Facility form

* Remove console.error

* Fix facility constraints

* Show facility type as read only in edit

--- a/angular/projects/admin/src/app/facilities/new-facility.component.html
+++ b/angular/projects/admin/src/app/facilities/new-facility.component.html
@@ -5,7 +5,7 @@
   <div class="col-xl-6">
     <shared-form (create)="onCreate($event)" type="facilities">
       <ng-template let-record="record" let-error="error">
-        <admin-facilities-form record="record" error="error"></admin-facilities-form>
+        <admin-facilities-form [record]="record" [error]="error"></admin-facilities-form>
       </ng-template>
     </shared-form>
   </div>
