[Closes #421] Format phone numbers on entry

--- a/angular/projects/shared/src/lib/components/xsd/elements/inputs/xsd-input.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/inputs/xsd-input.component.html
@@ -25,7 +25,9 @@
     [pattern]="pattern"
     [type]="inputType"
     class="form-control"
-    [class.is-invalid]="isInvalid" />
+    [class.is-invalid]="isInvalid"
+    [mask]="mask"
+    [dropSpecialCharacters]="false" />
   <input
     *ngIf="pattern && minLength && maxLength"
     [id]="formName"
