--- a/angular/projects/admin/src/app/demographics/versions/validation-error-version-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/versions/validation-error-version-demographics.component.html
@@ -17,6 +17,7 @@
   [stack]="stack"
   [basePath]="basePath"
   [element]="element"
-  [data]="value"></shared-xsd-form-group>
+  [data]="value"
+  [error]="recordError"></shared-xsd-form-group>
 <hr />
 <hr />
