Show display text and error on error for display entries

--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-multi.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-multi.component.html
@@ -37,7 +37,7 @@
     [error]="error"
     [displayOnly]="displayOnly"></shared-xsd-element-nillable>
 </ng-container>
-<div *ngIf="!isDisplayOnly" [class.feedback]="!isInvalid" [class.invalid-feedback]="isInvalid">
+<div *ngIf="!isDisplayOnly || isInvalid" [class.feedback]="!isInvalid" [class.invalid-feedback]="isInvalid">
   {{ displayText }}
   <span *ngIf="isInvalid">{{ errorMessages.join(' ') }}</span>
 </div>
