Simplify validation error logic, introduce a readOnly state to xsd elements

--- a/angular/projects/shared/src/lib/components/xsd/elements/inputs/xsd-element-input-city.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/inputs/xsd-element-input-city.component.html
@@ -9,6 +9,7 @@
     [name]="formName"
     [ngbTypeahead]="search"
     [editable]="false"
+    [readOnly]="readOnly"
     [inputFormatter]="inputFormatter"
     [resultFormatter]="resultFormatter"
     [(ngModel)]="value"
