--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-input.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-input.component.html
@@ -12,6 +12,7 @@
     [error]="error"
     [index]="index"
     [selectedValue]="selectedValue"
+    [readOnly]="readOnly"
     [displayOnly]="displayOnly">
   </shared-xsd-element-input-city>
   <shared-xsd-element-input-county
@@ -27,6 +28,7 @@
     [error]="error"
     [index]="index"
     [selectedValue]="selectedValue"
+    [readOnly]="readOnly"
     [displayOnly]="displayOnly">
   </shared-xsd-element-input-county>
   <shared-xsd-input
@@ -43,6 +45,7 @@
     [error]="error"
     [index]="index"
     [selectedValue]="selectedValue"
+    [readOnly]="readOnly"
     [displayOnly]="displayOnly">
   </shared-xsd-input>
   <shared-xsd-select
@@ -58,6 +61,7 @@
     [error]="error"
     [index]="index"
     [selectedValue]="selectedValue"
+    [readOnly]="readOnly"
     [displayOnly]="displayOnly">
   </shared-xsd-select>
   <shared-xsd-select-state
@@ -73,6 +77,7 @@
     [error]="error"
     [index]="index"
     [selectedValue]="selectedValue"
+    [readOnly]="readOnly"
     [displayOnly]="displayOnly">
   </shared-xsd-select-state>
 </ng-container>
