--- a/angular/projects/admin/src/app/demographics/versions/validation-error-version-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/versions/validation-error-version-demographics.component.html
@@ -6,6 +6,7 @@
   [basePath]="basePath"
   [element]="element"
   [data]="data"
+  [readOnly]="true"
   [error]="recordError"></shared-xsd-form-group>
 <div class="mb-4">
   <a class="btn btn--sm btn--secondary" [routerLink]="link">Go to Record</a>
