--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -49,9 +49,11 @@ form {
     flex-grow: 1;
     margin: 0.375rem 0.875rem;
     padding: 0;
-    &::placeholder,
-    &:disabled {
+    &::placeholder {
       color: $base-300;
+    }
+    &:disabled {
+      color: $base-500;
     }
     &:focus {
       outline: none;
