--- a/angular/projects/shared/src/lib/components/xsd/elements/inputs/xsd-input.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/inputs/xsd-input.component.html
@@ -1,5 +1,7 @@
 <ng-container *ngIf="isDisplayOnly">
-  <ng-container *ngIf="value as val; else noVal">{{ val }}</ng-container>
+  <ng-container *ngIf="value as val; else noVal"
+    ><span [class.text-readonly]="readOnly">{{ val }}</span></ng-container
+  >
   <ng-template #noVal>&nbsp;</ng-template>
 </ng-container>
 <ng-container *ngIf="!isDisplayOnly">
@@ -13,6 +15,8 @@
     [minLength]="minLength"
     [maxLength]="maxLength"
     [type]="inputType"
+    [disabled]="readOnly"
+    [readOnly]="readOnly"
     class="form-control"
     [class.is-invalid]="isInvalid" />
   <input
@@ -24,6 +28,8 @@
     (paste)="onPaste($event)"
     [pattern]="pattern"
     [type]="inputType"
+    [disabled]="readOnly"
+    [readOnly]="readOnly"
     class="form-control"
     [class.is-invalid]="isInvalid"
     [mask]="mask"
@@ -39,6 +45,8 @@
     [minLength]="minLength"
     [maxLength]="maxLength"
     [type]="inputType"
+    [disabled]="readOnly"
+    [readOnly]="readOnly"
     class="form-control"
     [class.is-invalid]="isInvalid" />
   <input
@@ -51,6 +59,8 @@
     [min]="min"
     [max]="max"
     [type]="inputType"
+    [disabled]="readOnly"
+    [readOnly]="readOnly"
     class="form-control"
     [class.is-invalid]="isInvalid" />
   <input
@@ -63,6 +73,8 @@
     [step]="0.1 * fractionDigits"
     [max]="'9'.repeat(totalDigits - fractionDigits) + '.' + '9'.repeat(fractionDigits)"
     [type]="inputType"
+    [disabled]="readOnly"
+    [readOnly]="readOnly"
     class="form-control"
     [class.is-invalid]="isInvalid" />
   <input
@@ -73,6 +85,8 @@
     (input)="onInput($event)"
     (paste)="onPaste($event)"
     [type]="inputType"
+    [disabled]="readOnly"
+    [readOnly]="readOnly"
     class="form-control"
     [class.is-invalid]="isInvalid" />
 </ng-container>
