--- a/angular/projects/shared/src/lib/components/xsd/elements/inputs/xsd-select-state.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/inputs/xsd-select-state.component.html
@@ -14,6 +14,8 @@
   [ngbTypeahead]="search"
   [inputFormatter]="formatter"
   [resultFormatter]="formatter"
+  [disabled]="readOnly"
+  [readOnly]="readOnly"
   [editable]="false"
   [selectOnExact]="true"
   [class.is-invalid]="isInvalid"
