--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-nillable.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-nillable.component.html
@@ -16,6 +16,7 @@
       [error]="error"
       [index]="index"
       [selectedValue]="selectedValue"
+      [readOnly]="readOnly"
       [displayOnly]="isDisplayOnly"></shared-xsd-element-input>
     <input
       *ngIf="isNil"
@@ -30,10 +31,11 @@
       [inputFormatter]="formatter"
       [resultFormatter]="formatter"
       [editable]="false"
+      [readOnly]="readOnly"
       [selectOnExact]="true"
       (focus)="focus$.next($any($event).target.value)"
       (click)="click$.next($any($event).target.value)" />
-    <div *ngIf="isNillable && !isDisplayOnly && !index" class="input-group-append">
+    <div *ngIf="isNillable && !readOnly && !isDisplayOnly && !index" class="input-group-append">
       <div class="form-check">
         <input (change)="onToggle($event)" [(ngModel)]="isNil" [id]="formName + '-nil'" type="checkbox" class="form-check-input" />
         <label [for]="formName + '-nil'" class="form-check-label">Nil?</label>
@@ -43,7 +45,7 @@
   <ng-template #noOtherAttributes>
     <div class="input-group align-items-center">
       <ng-container *ngTemplateOutlet="nillableContent"></ng-container>
-      <div *ngIf="!isDisplayOnly && index !== undefined && !(isRequired && index == 0)" class="input-group-append">
+      <div *ngIf="!readOnly && !isDisplayOnly && index !== undefined && !(isRequired && index == 0)" class="input-group-append">
         <button (click)="remValue(selectedValue)" tabindex="-1" class="btn btn--remove" type="button">Remove</button>
       </div>
     </div>
@@ -71,12 +73,13 @@
                 [error]="error"
                 [index]="index"
                 [selectedValue]="selectedValue"
+                [readOnly]="readOnly"
                 [displayOnly]="isDisplayOnly"></shared-xsd-element-input>
             </div>
           </ng-container>
         </div>
       </div>
-      <div *ngIf="!isDisplayOnly && index !== undefined && !(isRequired && index == 0)" class="input-group-append">
+      <div *ngIf="!readOnly && !isDisplayOnly && index !== undefined && !(isRequired && index == 0)" class="input-group-append">
         <button (click)="remValue(selectedValue)" tabindex="-1" class="btn btn--remove" type="button">Remove</button>
       </div>
     </ng-container>
