Fix non-readonly appearance

--- a/angular/projects/shared/src/lib/components/xsd/elements/inputs/xsd-input.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/inputs/xsd-input.component.html
@@ -1,7 +1,8 @@
 <ng-container *ngIf="isDisplayOnly">
-  <ng-container *ngIf="value as val; else noVal"
-    ><span [class.text-readonly]="readOnly">{{ val }}</span></ng-container
-  >
+  <ng-container *ngIf="value as val; else noVal">
+    <span *ngIf="readOnly" class="text-readonly">{{ val }}</span>
+    <ng-container *ngIf="!readOnly">{{ val }}</ng-container>
+  </ng-container>
   <ng-template #noVal>&nbsp;</ng-template>
 </ng-container>
 <ng-container *ngIf="!isDisplayOnly">
