Make record buttons fixed to bottom

--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-form-group.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-form-group.component.html
@@ -16,6 +16,7 @@
           [element]="nestedElement"
           [data]="selectedValue"
           [displayOnly]="true"
+          [readOnly]="readOnly"
           [error]="error"></shared-xsd-element-multi>
       </div>
       <div *ngIf="!readOnly" class="form-field__subitem">
