--- a/angular/projects/shared/src/lib/components/xsd/xsd-record.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/xsd-record.component.html
@@ -62,6 +62,10 @@
   </form>
   <div *ngIf="record" class="col-md-6 mb-3 position-relative">
     <div class="position-fixed">
+      <h4>Jump to:</h4>
+      <ul>
+        <li *ngFor="let element of recordSchema?.childElements">{{ element.displayName }} ({{ element.name }})</li>
+      </ul>
       <p>{{ record.data | json }}</p>
       <p>{{ recordError | json }}</p>
     </div>
