--- a/angular/projects/shared/src/lib/components/xsd/xsd-record.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/xsd-record.component.html
@@ -61,18 +61,15 @@
     </fieldset>
   </form>
   <div *ngIf="record" class="col-md-6 mb-3 position-relative">
-    <div class="position-fixed">
+    <div class="xsd-record-shortcuts">
       <h4>Jump to:</h4>
-      <ul class="xsd-record-shortcuts h4">
+      <ul class="h4">
         <li *ngFor="let element of recordSchema?.childElements">
           <a [class.text-danger]="hasError(element.name)" (click)="jump(element.name)" tabindex="0"
             >{{ element.displayName }} ({{ element.name }})</a
           >
         </li>
       </ul>
-      <p>{{ record.data | json }}</p>
-      <p>Base path: {{ recordSchema?.basePath }}</p>
-      <p>{{ recordError | json }}</p>
     </div>
   </div>
 </div>
