[Closes #246] First pass, DEM validation (#465)
* WIP DEM validation results UI

* Trying to get individual fields to render

* Closer to working individual fields

* Correct rendering of validation fields

* First pass, schematron errors

* Mark isValid false on setting schematron errors

* Mark invalid from root

* Show display text and error on error for display entries

* Fix errors not appearing in nested modal

* Simplify validation error logic, introduce a readOnly state to xsd elements

* Set up shared models files

* Add ngx-translate

* Upgrade Angular for backtick interpolation in templates, use translate to display sections

* Fix non-readonly appearance

* Make record buttons fixed to bottom

* New XsdElement class

* Jump to shortcuts, including error highlight

* Make TOC scrollable

* Fix test failure

--- a/angular/projects/admin/src/app/demographics/versions/validate-version-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/versions/validate-version-demographics.component.html
@@ -8,14 +8,22 @@
       <li class="nav__item"><a tabIndex="0" class="nav__link" routerLink="../preview">XML</a></li>
       <li class="nav__item"><a tabIndex="0" class="nav__link nav__link--active">Validation</a></li>
     </ul>
-  </div>
-</div>
-<div>
-  <div *ngIf="validationErrors === undefined"><shared-loader></shared-loader></div>
-  <div *ngIf="validationErrors === null">No validation errors!</div>
-  <div *ngIf="validationErrors">
-    <div *ngFor="let error of validationErrors.errors">
-      {{ error.value }}: {{ error.message }} <a [routerLink]="['/demographics', error.section, error.id]">Fix</a>
-    </div>
+    <div *ngIf="validationErrors === undefined || data === undefined"><shared-loader></shared-loader></div>
+    <div *ngIf="validationErrors === null">No validation errors!</div>
+    <form *ngIf="validationErrors && data">
+      <div *ngFor="let section of sections">
+        <h3 class="mb-3">{{ `section.${section}`|translate }}</h3>
+        <ng-container *ngFor="let id of errorsForSection(section)">
+          <div *ngIf="records[section][id]">
+            <h4>{{ records[section][id].description }}</h4>
+            <admin-demographics-version-validation-error
+              *ngFor="let error of errors[section][id]"
+              [version]="data"
+              [record]="records[section][id]"
+              [error]="error"></admin-demographics-version-validation-error>
+          </div>
+        </ng-container>
+      </div>
+    </form>
   </div>
 </div>
