--- a/angular/projects/shared/src/lib/components/xsd/xsd-record.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/xsd-record.component.html
@@ -23,7 +23,7 @@
         <button (click)="onDeleteDraft()" type="button" class="btn btn--primary">Undo Archive</button>
       </div>
     </ng-container>
-    <fieldset *ngIf="!(isEditingDraft && record.archivedAt)" [disabled]="isLoading">
+    <fieldset class="xsd-record-fieldset" *ngIf="!(isEditingDraft && record.archivedAt)" [disabled]="isLoading">
       <ng-container *ngIf="!template">
         <shared-xsd-form-group
           *ngFor="let element of recordSchema?.childElements"
@@ -39,25 +39,37 @@
         *ngIf="template"
         [ngTemplateOutlet]="template"
         [ngTemplateOutletContext]="{ recordSchema, record, error: recordError }"></ng-template>
-      <div class="d-flex justify-content-between mb-3">
-        <button *ngIf="isNewRecord || isEditingDraft || !record.draft" type="submit" class="btn btn--primary">Save Draft</button>
-        <button *ngIf="isEditingDraft || record.isDraft" (click)="onDeleteDraft()" type="button" class="btn btn--danger">
-          Delete Draft
-        </button>
-        <button
-          *ngIf="!(isNewRecord || isEditingDraft || record.isDraft) && !record.draft"
-          (click)="onArchive()"
-          type="button"
-          class="btn btn--danger">
-          Archive
-        </button>
+      <div class="xsd-record-footer fixed-bottom shadow-lg">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="d-flex justify-content-between">
+              <button *ngIf="isNewRecord || isEditingDraft || !record.draft" type="submit" class="btn btn--primary">Save Draft</button>
+              <button *ngIf="isEditingDraft || record.isDraft" (click)="onDeleteDraft()" type="button" class="btn btn--danger">
+                Delete Draft
+              </button>
+              <button
+                *ngIf="!(isNewRecord || isEditingDraft || record.isDraft) && !record.draft"
+                (click)="onArchive()"
+                type="button"
+                class="btn btn--danger">
+                Archive
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
     </fieldset>
   </form>
   <div *ngIf="record" class="col-md-6 mb-3 position-relative">
-    <div class="position-fixed">
-      <p>{{ record.data | json }}</p>
-      <p>{{ recordError | json }}</p>
+    <div class="xsd-record-shortcuts">
+      <h4>Jump to:</h4>
+      <ul class="h4">
+        <li *ngFor="let element of recordSchema?.childElements">
+          <a [class.text-danger]="hasError(element.name)" (click)="jump(element.name)" tabindex="0"
+            >{{ element.displayName }} ({{ element.name }})</a
+          >
+        </li>
+      </ul>
     </div>
   </div>
 </div>
