Starting Interface data model and routes and client

--- a/angular/projects/admin/src/app/app.component.html
+++ b/angular/projects/admin/src/app/app.component.html
@@ -60,6 +60,9 @@
       <a routerLink="/guides" routerLinkActive="sidebar__item--active" class="sidebar__item">Guides</a>
     </li>
     <li>
+      <a routerLink="/interfaces" routerLinkActive="sidebar__item--active" class="sidebar__item">Interfaces</a>
+    </li>
+    <li>
       <a routerLink="/lists" routerLinkActive="sidebar__item--active" class="sidebar__item">Lists</a>
     </li>
     <li>
