--- a/angular/projects/admin/src/app/interfaces/sections/edit-interface-section.component.html
+++ b/angular/projects/admin/src/app/interfaces/sections/edit-interface-section.component.html
@@ -3,57 +3,61 @@
   <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
     <h1 class="h2">Edit Section</h1>
   </div>
-  <shared-form
-    *ngIf="id"
-    type="sections"
-    [id]="id"
-    [hideButtons]="!isEditing"
-    [showCancel]="true"
-    (cancel)="isEditing = false"
-    (update)="isEditing = false"
-    (delete)="onDelete()"
-    class="d-block col-xl-6">
-    <ng-template let-record="record" let-error="error">
-      <ng-container *ngIf="isEditing">
-        <admin-interfaces-screen-form [record]="record" [error]="error"></admin-interfaces-screen-form>
-      </ng-container>
-      <ng-container *ngIf="!isEditing">
-        <div class="mb-3">
-          <label>Name</label>
-          <h3>{{ record.name }}</h3>
-        </div>
-        <div class="mb-3">
-          <button (click)="isEditing = true" class="btn btn--sm btn--primary">Edit</button>
-        </div>
-        <div class="table-responsive">
-          <table class="table">
-            <thead>
-              <tr class="list">
-                <th>
-                  Elements
-                  <a
-                    [routerLink]="['/interfaces', interfaceId, 'screens', screenId, 'sections', id, 'elements', 'new']"
-                    class="btn btn--sm btn--primary ms-3"
-                    >Add</a
-                  >
-                </th>
-                <th>Position</th>
-              </tr>
-            </thead>
-            <shared-list
-              type="sectionElements"
-              [params]="params"
-              [basePath]="'/interfaces/' + interfaceId + '/screens/' + screenId + '/sections/' + id">
-              <ng-template let-records="records" let-r="record">
-                <tr [routerLink]="['/interfaces', interfaceId, 'screens', screenId, 'sections', id, 'elements', record.id]">
-                  <td>{{ name(r) }}</td>
-                  <td>{{ r.position }}</td>
+  <div *ngIf="id" class="row">
+    <shared-form
+      type="sections"
+      [id]="id"
+      [hideButtons]="!isEditing"
+      [showCancel]="true"
+      (cancel)="isEditing = false"
+      (update)="isEditing = false"
+      (delete)="onDelete()"
+      class="d-block col-xl-5">
+      <ng-template let-record="record" let-error="error">
+        <ng-container *ngIf="isEditing">
+          <admin-interfaces-screen-form [record]="record" [error]="error"></admin-interfaces-screen-form>
+        </ng-container>
+        <ng-container *ngIf="!isEditing">
+          <div class="mb-3">
+            <label>Name</label>
+            <h3>{{ record.name }}</h3>
+          </div>
+          <div class="mb-3">
+            <button (click)="isEditing = true" class="btn btn--sm btn--primary">Edit</button>
+          </div>
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
+                <tr class="list">
+                  <th>
+                    Elements
+                    <a
+                      [routerLink]="['/interfaces', interfaceId, 'screens', screenId, 'sections', id, 'elements', 'new']"
+                      class="btn btn--sm btn--primary ms-3"
+                      >Add</a
+                    >
+                  </th>
+                  <th>Position</th>
                 </tr>
-              </ng-template>
-            </shared-list>
-          </table>
-        </div>
-      </ng-container>
-    </ng-template>
-  </shared-form>
+              </thead>
+              <shared-list
+                type="sectionElements"
+                [params]="params"
+                [basePath]="'/interfaces/' + interfaceId + '/screens/' + screenId + '/sections/' + id">
+                <ng-template let-records="records" let-r="record">
+                  <tr [routerLink]="['/interfaces', interfaceId, 'screens', screenId, 'sections', id, 'elements', r.id]">
+                    <td>{{ name(r) }}</td>
+                    <td>{{ r.position }}</td>
+                  </tr>
+                </ng-template>
+              </shared-list>
+            </table>
+          </div>
+        </ng-container>
+      </ng-template>
+    </shared-form>
+    <div class="col-xl-6 offset-xl-1">
+      <h3>Preview</h3>
+    </div>
+  </div>
 </div>
