Add Admin ability to set isEventsOnly on an Agency

--- a/angular/projects/admin/src/app/agencies/edit-agency.component.html
+++ b/angular/projects/admin/src/app/agencies/edit-agency.component.html
@@ -81,6 +81,9 @@
       <div *ngIf="record.isClaimed" class="mb-3">
         <shared-text-field id="routedUrl" label="Routed URL" [source]="record" [target]="record" [error]="error"></shared-text-field>
       </div>
+      <div *ngIf="record.isClaimed" class="mb-3">
+        <shared-checkbox id="isEventsOnly" label="Is Events Only?" [source]="record" [target]="record" [error]="error"></shared-checkbox>
+      </div>
     </ng-template>
   </shared-form>
 </div>
